[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=63",
]

[project]
name = "meshmode"
version = "2021.2"
description = "High-order polynomial discretizations of and on meshes"
readme = "README.rst"
license = { text = "MIT" }
authors = [
    { name = "Andreas Kloeckner", email = "inform@tiker.net" },
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "arraycontext>=2021.1",
    "gmsh-interop>=2021.1",
    "loopy>=2024.1",
    "modepy>=2021.1",
    "numpy",
    "pymbolic>=2022.2",
    "pytools>=2022.1",
    "recursivenodes",
]

[project.optional-dependencies]
doc = [
    "furo",
    "sphinx>=4",
    "sphinx-copybutton",
]
test = [
    "mypy",
    "pylint",
    "pytest",
    "ruff",
]
visualization = [
    "h5py",
    "pyvisfile>=2022.1",
]

[project.urls]
Documentation = "https://documen.tician.de/meshmode"
Repository = "https://github.com/inducer/meshmode"

[tool.setuptools.packages.find]
include = [
    "meshmode*",
]

[tool.isort]
known_firstparty = [
    "pytools",
    "pyopencl",
    "loopy",
    "arraycontext",
    "gmsh_interop",
    "pyvisfile",
    "modepy",
    "pytato",
    "pymbolic",
    "pymetis",
    "firedrake",
]
known_local_folder = [ "meshmode" ]
line_length = 85
lines_after_imports = 2
combine_as_imports = true
multi_line_output = 4

[tool.pytest.ini_options]
markers = [
    "mpi: test requires MPI",
    "octave: test requires Octave",
]

[tool.mypy]
python_version = "3.8"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "meshmode.discretization.*",
    "meshmode.dof_array.*",
    "meshmode.interop.*",
    "meshmode.mesh.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "FIAT.*",
    "finat.*",
    "firedrake.*",
    "gmsh_interop.*",
    "h5py.*",
    "loopy.*",
    "matplotlib.*",
    "mayavi.*",
    "mpl_toolkits.*",
    "oct2py.*",
    "pymbolic.*",
    "pymetis.*",
    "pyop2.*",
    "pyopencl.*",
    "pytential.*",
    "pyvisfile.*",
    "recursivenodes.*",
    "scipy.*",
]
ignore_missing_imports = true
